# fellestrekk

./: Cargo.toml  README.md
games/: arsehole.md
languages/: da.json  en.json
src/: card.rs  dealer.rs  fellestrekk.rs  games.rs  hand.rs  language.rs  main.rs  websocket_server.rs
src/games/: blackjack.rs
static/: main.js  pixi.html  spel.css  websockets.html
static/game/: index.html  main.js
templates/: base.html.tera  game.html.tera  index.html.tera
templates/error/: 404.html.tera
